<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.resurrect.filmpopuler.activity.detail.MoviesDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/movie_detail_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/movie_detail_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:minHeight="@dimen/backdrop_image_height"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/movie_detail_backdrop_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:fitsSystemWindows="true"
                android:minHeight="@dimen/backdrop_image_height"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

            <FrameLayout
                android:id="@+id/movie_detail_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:paddingTop="?attr/actionBarSize"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.3">

                <LinearLayout
                    android:id="@+id/movie_detail_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/padding_vertical"
                    android:paddingEnd="@dimen/padding_horizontal"
                    android:paddingStart="@dimen/movie_title_wrapper_padding_start"
                    android:paddingTop="@dimen/padding_vertical">

                    <TextView
                        android:id="@+id/movie_detail_title"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:paddingBottom="@dimen/detail_text_padding_vertical"
                        tools:text="@string/tools_title" />

                    <TextView
                        android:id="@+id/movie_detail_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/detail_text_padding_vertical"
                        android:paddingTop="@dimen/detail_text_padding_vertical"
                        tools:text="@string/tools_release_date" />

                    <TextView
                        android:id="@+id/movie_detail_ratings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/text_drawable_padding_small"
                        android:drawableTint="@color/colorAccent"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/detail_text_padding_vertical"
                        tools:text="@string/tools_text_rating" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/movie_detail_poster_image"
                    android:layout_width="@dimen/poster_image_width"
                    android:layout_height="@dimen/poster_image_height"
                    android:layout_marginBottom="@dimen/poster_margin_bottom"
                    android:layout_marginStart="@dimen/poster_margin_start"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop" />

            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/movie_detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:theme="@style/ThemeOverlay.AppCompat.Dark">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/movie_detail_toolbar_title"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:visibility="invisible"
                        tools:text="Title" />

                </LinearLayout>

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/MovieDetail.SubHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_detail_tagline" />

            <TextView
                android:id="@+id/movie_detail_tagline_field"
                style="@style/MovieDetail.Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/MovieDetail.SubHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_detail_duration" />

            <TextView
                android:id="@+id/movie_detail_duration_field"
                style="@style/MovieDetail.Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                style="@style/MovieDetail.SubHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movie_detail_overview" />

            <TextView
                android:id="@+id/movie_detail_overview_field"
                style="@style/MovieDetail.Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/lorem_ipsum" />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/movie_detail_favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_favorite_border_white_24dp"
        app:layout_anchor="@+id/movie_detail_appbar"
        app:layout_anchorGravity="bottom|end" />

</android.support.design.widget.CoordinatorLayout>